tests/ui/concurrent_cached_size_with_redis.stderr
error: `size` only applies to the default in-memory store, not `redis = true`
 --> tests/ui/concurrent_cached_size_with_redis.rs:9:4
  |
9 | fn my_fn(k: i32) -> Result<i32, String> {
  |    ^^^^^
